# Lyrics-Helper

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
Lyricify.Lyrics.Helper/Helpers/Optimization/: InfoLines.cs
examples/: demo.rs  search_lyrics_test.rs  search_test.rs
lyrics-core/: Cargo.toml  README.md
lyrics-core/src/: lib.rs
lyrics-core/src/helpers/: chinese_helper.rs  math_helper.rs  mod.rs  offset_helper.rs  string_helper.rs  type_helper.rs
lyrics-core/src/helpers/optimization/: apple_music.rs  explicit.rs  info_lines.rs  mod.rs  musixmatch.rs  sync_downgrade.rs  yrc.rs
lyrics-core/src/models/: line_info.rs  lyrics_data.rs  lyrics_types.rs  mod.rs  syllable_info.rs  track_metadata.rs
lyrics-core/src/traits/: decrypter.rs  generator.rs  mod.rs  parser.rs
lyrics-crypto/: Cargo.toml  README.md
lyrics-crypto/src/: lib.rs
lyrics-crypto/src/decrypter/: mod.rs
lyrics-crypto/src/decrypter/krc/: decrypter.rs  mod.rs
lyrics-crypto/src/decrypter/qrc/: decrypter.rs  des_helper.rs  mod.rs
lyrics-generators/: Cargo.toml  README.md
lyrics-generators/src/: krc_generator.rs  lib.rs  lrc_generator.rs  lyricify_lines_generator.rs  lyricify_syllable_generator.rs  qrc_generator.rs  yrc_generator.rs
lyrics-helper/: Cargo.toml
lyrics-helper/examples/: demo.rs  search_test.rs
lyrics-helper/src/: lib.rs
lyrics-helper/src/decrypter/: mod.rs
lyrics-helper/src/decrypter/qrc/: des_helper.rs  mod.rs
lyrics-helper/src/generators/: krc_generator.rs  lrc_generator.rs  lyricify_lines_generator.rs  lyricify_syllable_generator.rs  mod.rs  qrc_generator.rs  yrc_generator.rs
lyrics-helper/src/helpers/: math_helper.rs  offset_helper.rs  string_helper.rs
lyrics-helper/src/helpers/optimization/: explicit.rs  info_lines.rs  mod.rs  musixmatch.rs  yrc.rs
lyrics-helper/src/models/: lyrics_data.rs  lyrics_types.rs  mod.rs  syllable_info.rs
lyrics-helper/src/parsers/: attributes_helper.rs  krc_parser.rs  lrc_parser.rs  lyricify_lines_parser.rs  lyricify_syllable_parser.rs  mod.rs  musixmatch_parser.rs  qrc_parser.rs  spotify_parser.rs  ttml_parser.rs  yrc_parser.rs
lyrics-helper/src/providers/web/: base_api.rs
lyrics-helper/src/providers/web/apple_music/: api.rs  response.rs
lyrics-helper/src/providers/web/kugou/: api.rs  response.rs
lyrics-helper/src/providers/web/lrclib/: response.rs
lyrics-helper/src/providers/web/musixmatch/: api.rs
lyrics-helper/src/providers/web/netease/: api.rs  response.rs
lyrics-helper/src/providers/web/qq_music/: api.rs  response.rs
lyrics-helper/src/providers/web/soda_music/: response.rs
lyrics-helper/src/searchers/: compare_helper.rs  lrclib.rs  mod.rs  musixmatch.rs  netease.rs  search_result.rs  searcher.rs  soda_music.rs
lyrics-helper/tests/: parser_tests.rs
lyrics-parsers/: Cargo.toml  README.md
lyrics-parsers/src/: lib.rs
lyrics-parsers/src/parsers/: attributes_helper.rs  krc_parser.rs  lrc_parser.rs  lyricify_lines_parser.rs  lyricify_syllable_parser.rs  mod.rs  musixmatch_parser.rs  qrc_parser.rs  spotify_parser.rs  ttml_parser.rs  yrc_parser.rs
lyrics-search/: Cargo.toml  README.md
lyrics-search/src/: lib.rs
lyrics-search/src/providers/: mod.rs
lyrics-search/src/providers/web/: base_api.rs  mod.rs
lyrics-search/src/providers/web/apple_music/: api.rs  response.rs
lyrics-search/src/providers/web/kugou/: api.rs  response.rs
lyrics-search/src/providers/web/lrclib/: api.rs  response.rs
lyrics-search/src/providers/web/musixmatch/: api.rs  response.rs
lyrics-search/src/providers/web/netease/: api.rs  response.rs
lyrics-search/src/providers/web/qq_music/: api.rs  response.rs
lyrics-search/src/providers/web/soda_music/: api.rs  response.rs
lyrics-search/src/providers/web/spotify/: api.rs  response.rs
lyrics-search/src/searchers/: apple_music.rs  compare_helper.rs  kugou.rs  lrclib.rs  mod.rs  musixmatch.rs  netease.rs  qq_music.rs  search_result.rs  searcher.rs  soda_music.rs  spotify.rs
