[workspace]
members = [
    "lyrics-core",
    "lyrics-parsers",
    "lyrics-generators",
    "lyrics-crypto",
    "lyrics-search",
]
exclude = ["lyrics-helper"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["ChouChiu"]
repository = "https://github.com/ChouChiu/Lyricify-Lyrics-Helper"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
quick-xml = "0.36"
flate2 = "1"
base64 = "0.22"
once_cell = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
urlencoding = "2"
pretty_assertions = "1"
