[package]
name = "lyrics-generators"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lyrics generator implementations for various formats"

[dependencies]
lyrics-core = { path = "../lyrics-core" }
