[package]
name = "lyrics-helper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lyrics toolset - facade crate re-exporting all lyrics crates"
readme = "README.md"

[dependencies]
lyrics-core = { path = "../lyrics-core", version = "0.1.1" }
lyrics-parsers = { path = "../lyrics-parsers", version = "0.1.1" }
lyrics-generators = { path = "../lyrics-generators", version = "0.1.1" }
lyrics-crypto = { path = "../lyrics-crypto", version = "0.1.1" }
lyrics-search = { path = "../lyrics-search", version = "0.1.1", optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["search"]
search = ["lyrics-search"]

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "search_test"
path = "examples/search_test.rs"

[[example]]
name = "search_lyrics_test"
path = "examples/search_lyrics_test.rs"

