[package]
name = "lyrics-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lyrics search functionality for various platforms"

[dependencies]
lyrics-core = { path = "../lyrics-core", version = "0.1.0" }
lyrics-crypto = { path = "../lyrics-crypto", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[features]
default = ["search"]
search = ["reqwest", "tokio", "async-trait", "urlencoding", "rand", "base64"]
